# AOE2-McGenieSCX

./: .gitignore  LICENSE  README.md  pyproject.toml
aoe2_geniescx/: __init__.py  header.py  player.py  types.py  victory.py
aoe2_geniescx/_support/: __init__.py
aoe2_geniescx/convert/: hd_to_wk.py
aoe2_mcgeniescx/: __init__.py  format.py  types.py
aoe2_mcgeniescx/_support/: __init__.py
genie_scx_py/: __init__.py  _io.py  ai.py  bitmap.py  format.py  map.py  scenario.py  triggers.py  types.py
genie_scx_py/_support/: __init__.py  ids.py  macros.py  map_into.py  read.py  strings.py
genie_scx_py/convert/: __init__.py  aoc_to_wk.py  mod.py
tests/: test_data_version_normalize.py  test_definitive_rejection.py
