[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genie-scx-py"
version = "0.1.0"
description = "Pure-Python port of the Rust genie-scx scenario parser (legacy AoE II .scn/.scx containers)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
keywords = ["age-of-empires", "aoe2", "scenario", "genie-scx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/UnluckyForSome/genie-scx-py"
Repository = "https://github.com/UnluckyForSome/genie-scx-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["genie_scx_py*"]
